Include comments box on blog post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,6 +28,8 @@
         <div class="wrapper">
           {{ content }}
         </div>
+        
+        {% include comments.html %}
       </main>
 
     </div>
