--- a/css/main.sass
+++ b/css/main.sass
@@ -267,6 +267,11 @@ header
     background-color: $linkColorActive
     color: #fff
 
+  .comment-box
+    padding-top: 10px
+    margin-top: 40px
+    border-top: 1px solid $lightGreen
+
   main
     padding: 0 20px
     margin: 35px 0 50px 0
