Translate comments title to english

--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,7 +1,7 @@
 {% if page.comments %}
   <div class="wrapper">
     <section class="comment-box">
-      <h3>Comentários</h3>
+      <h3>Comments</h3>
       <div id="disqus_thread"></div>
     </section>
 
