Fix my Twitter username :racehorse:

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,7 @@
       </script>
        or add me on <a href="skype:osnysantos?chat">Skype</a>.</p>
 
-      <p>I also share some interesting things about design and development at my <a href="http://www.twitter.com/osnyantos">Twitter</a> account. If enjoy it, you can follow me.</p>
+      <p>I also share some interesting things about design and development at my <a href="http://www.twitter.com/osnysantos">Twitter</a> account. If enjoy it, you can follow me.</p>
     </div>
     
 
